--- a/story-book/package.json
+++ b/story-book/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "mongoose": "^5.5.14",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0"
