--- a/story-book/package.json
+++ b/story-book/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
     "express-session": "^1.16.2",
     "mongoose": "^5.5.14",
     "passport": "^0.4.0",
